Fix filter columns grid layout and keynumbers row-gap spacing, Ref: DEV-765

--- a/content/themes/dude/assets/src/sass/gutenberg-acf/blocks/_keynumbers-content.scss
+++ b/content/themes/dude/assets/src/sass/gutenberg-acf/blocks/_keynumbers-content.scss
@@ -54,7 +54,7 @@
 
   .col-numbers {
     display: grid;
-    row-gap: 9rem;
+    row-gap: 4rem;
 
     @media (max-width: $container-ipad) {
       column-gap: 4rem;
